--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
       src="https://kit.fontawesome.com/ff4ab2d13f.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+<link rel="stylesheet" href="style.css"/>
+    <title>Hidden Search</title>
   </head>
   <body>
+<div class="search">
+<input type="text" class="input" placeholder="Search...">
+<button class="btn">
+<i class="fas fa-search"></i>
+</button>
+</div>
+
     <script src="script.js"></script>
   </body>
 </html>
